# korus_comms

./: .cproject  .project  README.md  stack.xml
pick_and_place_msgs/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pick_and_place_msgs/action/: FindObject.action  MoveArm.action  MoveGripper.action  PickObject.action  PlaceObject.action
pick_and_place_msgs/msg/: FindObjectAction.msg  FindObjectActionFeedback.msg  FindObjectActionGoal.msg  FindObjectActionResult.msg  FindObjectFeedback.msg  FindObjectGoal.msg  FindObjectResult.msg  MoveArmGoal.msg  MoveGripperAction.msg  MoveGripperActionFeedback.msg  MoveGripperActionGoal.msg  MoveGripperActionResult.msg  MoveGripperGoal.msg  MoveGripperResult.msg
