<?xml version="1.0"?>
<package>
  <name>pick_and_place_msgs</name>
  <version>0.2.0</version>
  <description>Various action definitions and messages for pick'n'place related functionalitiesfor Korus</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>Yujin</license>
  <url type="website">https://github.com/yujinrobot/korus_comms</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend> 
</package>


